full project with professionlly (file-folder name, path name etc)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="all.min.css">
-  <link rel="stylesheet" href="website7.css">
+  <link rel="stylesheet" href="css/bootstrapcss/bootstrap.min.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 
 </head>
@@ -21,7 +21,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
 
-        <img src="website7/Logo.png" alt="Logo">
+        <img src="images/Logo.png" alt="Logo">
 
 
       </a>
@@ -104,7 +104,7 @@
               <a href="#" class="common_btn">Get started</a>
               <a href="#" class="service_btn">
 
-                <img src="website7/service.png" alt="service">
+                <img src="images/service.png" alt="service">
                 <span>Watch our service</span>
               </a>
 
@@ -127,10 +127,10 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="about_image">
-            <img src="/website7/company_logo.png" alt="about_logo">
+            <img src="/images/company_logo.png" alt="about_logo">
             <div class="cart">
               <div class="icon">
-                <img src="/website7/cart_icon.png" alt="cart_icon">
+                <img src="/images/cart_icon.png" alt="cart_icon">
               </div>
               <h4>25+ <span>Years</span></h4>
               <p>Experience</p>
@@ -191,7 +191,7 @@
       </div>
     </div>
     <div class="counter_img">
-      <img src="./website7/fun_element.png" alt="fun_element">
+      <img src="./images/fun_element.png" alt="fun_element">
     </div>
   </section>
 
@@ -215,7 +215,7 @@
       <div class="row service_body">
         <div class="col-lg-4">
           <div class="service_items">
-            <img src="./website7/service1.png" alt="logo">
+            <img src="./images/service1.png" alt="logo">
             <h4>House Cleaning</h4>
             <p>Imagine coming home to a completely clean, fresh smelling home after a long day of work. If you need our
               help </p>
@@ -225,7 +225,7 @@
 
         <div class="col-lg-4">
           <div class="service_items center">
-            <img src="./website7/service2.png" alt="logo">
+            <img src="./images/service2.png" alt="logo">
             <h4>House Cleaning</h4>
             <p>Imagine coming home to a completely clean, fresh smelling home after a long day of work. If you need our
               help </p>
@@ -233,7 +233,7 @@
         </div>
         <div class="col-lg-4">
           <div class="service_items">
-            <img src="./website7/service3.png" alt="logo">
+            <img src="./images/service3.png" alt="logo">
             <h4>House Cleaning</h4>
             <p>Imagine coming home to a completely clean, fresh smelling home after a long day of work. If you need our
               help </p>
@@ -268,7 +268,7 @@
         <div class="col-lg-8">
           <div class="chooseUs_details2">
             <div class="chooseUs_image">
-              <img src="./website7/choose_pic.png" alt="choose_pic">
+              <img src="./images/choose_pic.png" alt="choose_pic">
             </div>
             <div class="choose_benefits">
               <div class="choose_benefits_items">
@@ -320,7 +320,7 @@
    <div class="row project_main">
      <div class="col-lg-3">
       <div class="project_items">
-        <img src="./website7/project.png" alt="project">
+        <img src="./images/project.png" alt="project">
         <div class="project_details">
           <h4>Furniture Cleaning</h4>
           <p>Office cleaning</p>
@@ -331,7 +331,7 @@
      </div>
      <div class="col-lg-3">
       <div class="project_items">
-        <img src="./website7/project.png" alt="project">
+        <img src="./images/project.png" alt="project">
         <div class="project_details">
           <h4>Furniture Cleaning</h4>
           <p>Office cleaning</p>
@@ -342,7 +342,7 @@
      </div>
      <div class="col-lg-3">
       <div class="project_items">
-        <img src="./website7/project.png" alt="project">
+        <img src="./images/project.png" alt="project">
         <div class="project_details">
           <h4>Furniture Cleaning</h4>
           <p>Office cleaning</p>
@@ -352,9 +352,9 @@
 
      </div>
      <div class="col-lg-3 ">
-      <img class="small_Union" src="./website7/small_Union.png" alt="small_Union">
+      <img class="small_Union" src="./images/small_Union.png" alt="small_Union">
       <div class="project_items">
-        <img src="./website7/project.png" alt="project">
+        <img src="./images/project.png" alt="project">
         <div class="project_details ">
           <h4>Furniture Cleaning</h4>
           <p>Office cleaning</p>
@@ -416,7 +416,7 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="news_items">
-            <img src="./website7/news_img.png" alt="news_img">
+            <img src="./images/news_img.png" alt="news_img">
              <div class="date">
               <h4>20</h4>
               <p>August <span>2020</span></p>
@@ -431,7 +431,7 @@
         </div>
         <div class="col-lg-4">
           <div class="news_items">
-            <img src="./website7/news_img.png" alt="news_img">
+            <img src="./images/news_img.png" alt="news_img">
              <div class="date">
               <h4>20</h4>
               <p>August <span>2020</span></p>
@@ -446,7 +446,7 @@
         </div>
         <div class="col-lg-4">
           <div class="news_items">
-            <img src="./website7/news_img.png" alt="news_img">
+            <img src="./images/news_img.png" alt="news_img">
              <div class="date">
               <h4>20</h4>
               <p>August <span>2020</span></p>
@@ -474,7 +474,7 @@
           <div class="row">
             <div class="col-lg-5">
               <a href="#" class="footer_logo">
-                <img src="./website7/footer_logo.png" alt="footer_logo">
+                <img src="./images/footer_logo.png" alt="footer_logo">
               </a>
               <p class="footer_description">Install any demo or template with a single click. You can mix and match all the demos & templates. Every demo can be turned into one or multi-page.</p>
             </div>
@@ -538,7 +538,7 @@
 ================================================-->
 
 
-<script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+<script src="js/bootstrapjs/bootstrap.min.js"></script>
 </body>
 
 </html>
